Bug 1922606 - Extended networking metrics expiring in release 134 to release 146, r=cookie-reviewers,edgul
Differential Revision: https://phabricator.services.mozilla.com/D225222

UltraBlame original commit: f5eb3e7b97ea7495a6b2f4ea303b98cba5b5dfd8

--- a/netwerk/metrics.yaml
+++ b/netwerk/metrics.yaml
@@ -602,6 +602,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_reviews
 :
 -
@@ -642,6 +660,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_sensitivity
 :
 -
@@ -660,7 +696,7 @@ mozilla
 com
 expires
 :
-134
+146
 cookie_count_partitioned
 :
 type
@@ -730,6 +766,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_reviews
 :
 -
@@ -770,6 +824,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_sensitivity
 :
 -
@@ -788,7 +860,7 @@ mozilla
 com
 expires
 :
-134
+146
 cookie_count_unpartitioned
 :
 type
@@ -858,6 +930,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_reviews
 :
 -
@@ -898,6 +988,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_sensitivity
 :
 -
@@ -916,7 +1024,7 @@ mozilla
 com
 expires
 :
-134
+146
 cookie_count_part_by_key
 :
 type
@@ -998,6 +1106,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_reviews
 :
 -
@@ -1038,6 +1164,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_sensitivity
 :
 -
@@ -1056,7 +1200,7 @@ mozilla
 com
 expires
 :
-134
+146
 cookie_count_unpart_by_key
 :
 type
@@ -1138,6 +1282,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_reviews
 :
 -
@@ -1178,6 +1340,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_sensitivity
 :
 -
@@ -1196,7 +1376,7 @@ mozilla
 com
 expires
 :
-134
+146
 cookie_purge_max
 :
 type
@@ -1284,6 +1464,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_reviews
 :
 -
@@ -1324,6 +1522,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_sensitivity
 :
 -
@@ -1342,7 +1558,7 @@ mozilla
 com
 expires
 :
-134
+146
 cookie_purge_entry_max
 :
 type
@@ -1437,6 +1653,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_reviews
 :
 -
@@ -1477,6 +1711,24 @@ cgi
 id
 =
 1892158
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_sensitivity
 :
 -
@@ -1495,7 +1747,7 @@ mozilla
 com
 expires
 :
-134
+146
 cookie_chips_partition_limit_overflow
 :
 type
@@ -1553,6 +1805,24 @@ cgi
 id
 =
 1878391
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_reviews
 :
 -
@@ -1573,6 +1843,24 @@ cgi
 id
 =
 1878391
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922606
 data_sensitivity
 :
 -
@@ -1591,7 +1879,7 @@ mozilla
 com
 expires
 :
-134
+146
 sqlite_cookies_block_main_thread
 :
 type
