Bug 1925195 - Part 2: Add support to call DateObject::fillLocalTimeSlots from JIT code. r=jandem
Used in the next parts.

Differential Revision: https://phabricator.services.mozilla.com/D225925

UltraBlame original commit: 64ed1e7ffcbcc1acf0187e8b52b4379ed04ba965

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -9940,6 +9940,24 @@ ObjId
 -
 name
 :
+DateFillLocalTimeSlots
+shared
+:
+true
+transpile
+:
+true
+cost_estimate
+:
+4
+args
+:
+date
+:
+ObjId
+-
+name
+:
 ArrayFromArgumentsObjectResult
 shared
 :
