--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -11594,6 +11594,27 @@ custom
 -
 name
 :
+DateFillLocalTimeSlots
+operands
+:
+date
+:
+Object
+congruent_to
+:
+if_operands_equal
+alias_set
+:
+custom
+generate_lir
+:
+true
+lir_temps
+:
+1
+-
+name
+:
 PostIntPtrConversion
 gen_boilerplate
 :
