Bug 1925195 - Part 4: Inline Date.prototype.get{Hours,Minutes,Seconds}. r=jandem
The local time components aren't stored in separate slots, but instead in a
single slot which stores the number of seconds since the start of the year.

Differential Revision: https://phabricator.services.mozilla.com/D225927

UltraBlame original commit: fb72a2390e63c25c244588c80ae15b8b8e8a5910

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -9958,6 +9958,60 @@ ObjId
 -
 name
 :
+DateHoursFromSecondsIntoYearResult
+shared
+:
+true
+transpile
+:
+true
+cost_estimate
+:
+2
+args
+:
+secondsIntoYear
+:
+ValId
+-
+name
+:
+DateMinutesFromSecondsIntoYearResult
+shared
+:
+true
+transpile
+:
+true
+cost_estimate
+:
+2
+args
+:
+secondsIntoYear
+:
+ValId
+-
+name
+:
+DateSecondsFromSecondsIntoYearResult
+shared
+:
+true
+transpile
+:
+true
+cost_estimate
+:
+2
+args
+:
+secondsIntoYear
+:
+ValId
+-
+name
+:
 ArrayFromArgumentsObjectResult
 shared
 :
