Bug 1922609 - Extend aboutprivatebrowsing.click_* telemetry probes until FF Nightly 139. r=timhuang
Differential Revision: https://phabricator.services.mozilla.com/D225937

UltraBlame original commit: a14958f3cf55d32f7c00d4a0ee55740ef977983e

--- a/browser/components/privatebrowsing/metrics.yaml
+++ b/browser/components/privatebrowsing/metrics.yaml
@@ -432,6 +432,16 @@ bugzil
 la
 /
 1871197
+-
+https
+:
+/
+/
+bugzil
+.
+la
+/
+1922609
 data_reviews
 :
 &
@@ -496,6 +506,20 @@ bugzil
 la
 /
 1871197
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D225937
 notification_emails
 :
 &
@@ -512,7 +536,7 @@ mozilla
 com
 expires
 :
-134
+139
 no_lint
 :
 -
@@ -574,7 +598,7 @@ notification_emails
 aboutprivatebrowsing_click_emails
 expires
 :
-134
+139
 no_lint
 :
 -
@@ -636,7 +660,7 @@ notification_emails
 aboutprivatebrowsing_click_emails
 expires
 :
-134
+139
 no_lint
 :
 -
