Bug 1903923 - Mark wpt /html/browsers/the-window-object/window-open-popup-behavior.html as expected failure on Fission; r=dom-core,sefeng
Differential Revision: https://phabricator.services.mozilla.com/D225921

UltraBlame original commit: ddfa388965e127b2c5f6ad3aaece243781ba3b8a

--- a/testing/web-platform/meta/html/browsers/the-window-object/window-open-popup-behavior.html.ini
+++ b/testing/web-platform/meta/html/browsers/the-window-object/window-open-popup-behavior.html.ini
@@ -89,7 +89,6 @@ fission
 :
 [
 FAIL
-PASS
 TIMEOUT
 NOTRUN
 ]
@@ -112,15 +111,14 @@ TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -171,20 +169,18 @@ fission
 :
 [
 FAIL
-PASS
 TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -270,20 +266,18 @@ fission
 :
 [
 FAIL
-PASS
 TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -348,7 +342,6 @@ fission
 :
 [
 FAIL
-PASS
 TIMEOUT
 NOTRUN
 ]
@@ -371,15 +364,14 @@ TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -430,20 +422,18 @@ fission
 :
 [
 FAIL
-PASS
 TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -511,7 +501,6 @@ fission
 :
 [
 FAIL
-PASS
 TIMEOUT
 NOTRUN
 ]
@@ -534,15 +523,14 @@ TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -791,7 +779,6 @@ fission
 :
 [
 PASS
-FAIL
 TIMEOUT
 NOTRUN
 ]
@@ -811,7 +798,6 @@ fission
 :
 [
 FAIL
-PASS
 NOTRUN
 ]
 if
@@ -831,20 +817,18 @@ fission
 :
 [
 FAIL
-PASS
 TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 toolbar
 =
@@ -876,22 +860,6 @@ linux
 "
 )
 and
-debug
-:
-PASS
-if
-not
-fission
-and
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 not
 debug
 :
@@ -902,18 +870,12 @@ TIMEOUT
 if
 not
 fission
-and
-(
-os
-=
-=
-"
-android
-"
-)
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 toolbar
 =
@@ -953,15 +915,14 @@ TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 resizable
 =
@@ -986,6 +947,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -1040,15 +1004,14 @@ TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 toolbar
 =
@@ -1073,6 +1036,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 resizable
 =
@@ -1099,6 +1065,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -1136,15 +1105,14 @@ TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -1274,15 +1242,14 @@ TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 toolbar
 =
@@ -1307,6 +1274,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 noopener
 noreferrer
@@ -1324,6 +1294,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -1391,7 +1364,6 @@ fission
 :
 [
 FAIL
-PASS
 TIMEOUT
 NOTRUN
 ]
@@ -1410,20 +1382,18 @@ fission
 :
 [
 PASS
-FAIL
 TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 toolbar
 =
@@ -1465,34 +1435,12 @@ NOTRUN
 if
 not
 fission
-and
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
-:
-PASS
-if
-not
-fission
-and
-(
-os
-=
-=
-"
-android
-"
-)
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 toolbar
 =
@@ -1519,6 +1467,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 menubar
 =
@@ -1545,6 +1496,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -1582,15 +1536,14 @@ TIMEOUT
 NOTRUN
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 menubar
 =
@@ -1615,6 +1568,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 location
 =
@@ -1690,15 +1646,14 @@ FAIL
 TIMEOUT
 ]
 if
-os
-=
-=
-"
-android
-"
+not
+fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 menubar
 =
@@ -1723,6 +1678,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 resizable
 =
@@ -1747,6 +1705,9 @@ fission
 :
 PASS
 FAIL
+#
+Bug
+1925026
 [
 toolbar
 =
