Bug 1924585 - add telemetry to measure hyphens in domain names causing compatibility issues r=Gijs,necko-reviewers,valentin
Differential Revision: https://phabricator.services.mozilla.com/D225561

UltraBlame original commit: 3f4fb9bf51b2c1c32def384f4a188e9d05b1c415

--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -20039,6 +20039,24 @@ fix
 this
 error
 .
+hyphen_compat
+:
+If
+the
+error
+is
+due
+to
+a
+domain
+label
+starting
+or
+ending
+with
+a
+hyphen
+.
 click
 :
 objects
