--- a/toolkit/components/glean/tests/pytest/metrics_test.yaml
+++ b/toolkit/components/glean/tests/pytest/metrics_test.yaml
@@ -173,6 +173,61 @@ no_lint
 :
 -
 GIFFT_NON_PING_LIFETIME
+unordered_boolean_metric
+:
+type
+:
+boolean
+expires
+:
+never
+description
+:
+|
+A
+multi
+-
+line
+description
+notification_emails
+:
+-
+glean
+-
+team
+mozilla
+.
+com
+metadata
+:
+permit_non_commutative_operations_over_ipc
+:
+true
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+1923035
+/
+data_reviews
+:
+-
+https
+:
+/
+/
+example
+.
+com
 labeled_boolean_metric
 :
 type
@@ -315,6 +370,61 @@ no_lint
 :
 -
 GIFFT_NON_PING_LIFETIME
+unordered_labeled_boolean_metric
+:
+type
+:
+labeled_boolean
+expires
+:
+never
+description
+:
+|
+A
+multi
+-
+line
+description
+metadata
+:
+permit_non_commutative_operations_over_ipc
+:
+true
+notification_emails
+:
+-
+glean
+-
+team
+mozilla
+.
+com
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+1923035
+/
+data_reviews
+:
+-
+https
+:
+/
+/
+example
+.
+com
 counter_metric
 :
 type
