--- a/taskcluster/kinds/toolchain/clang-tidy.yml
+++ b/taskcluster/kinds/toolchain/clang-tidy.yml
@@ -232,7 +232,7 @@ fetch
 -
 clang
 -
-18
+19
 linux64
 -
 clang
@@ -342,7 +342,7 @@ linux64
 -
 clang
 -
-18
+toolchain
 -
 linux64
 -
@@ -493,7 +493,7 @@ linux64
 -
 clang
 -
-18
+toolchain
 -
 macosx64
 -
@@ -652,7 +652,7 @@ linux64
 -
 clang
 -
-18
+toolchain
 -
 macosx64
 -
@@ -814,7 +814,7 @@ linux64
 -
 clang
 -
-18
+toolchain
 -
 vs
 -
@@ -986,7 +986,7 @@ linux64
 -
 clang
 -
-18
+toolchain
 -
 vs
 -
@@ -1184,7 +1184,7 @@ linux64
 -
 clang
 -
-18
+toolchain
 -
 linux64
 -
