Bug 1909343 - Update builders to rustc 1.82. r=firefox-build-system-reviewers,ahochheiden
The rust-dev toolchain is not updated because 1.82 changed things for
build-std that requires reworking the local patches entirely.

Differential Revision: https://phabricator.services.mozilla.com/D225714

UltraBlame original commit: 9f36338ef1de242b4c16970e17efeb3d58598dd1

--- a/taskcluster/kinds/searchfox/kind.yml
+++ b/taskcluster/kinds/searchfox/kind.yml
@@ -327,8 +327,6 @@ linux64
 -
 rust
 -
-searchfox
--
 linux64
 -
 cbindgen
@@ -508,7 +506,7 @@ linux64
 -
 rust
 -
-searchfox
+cross
 -
 linux64
 -
@@ -712,7 +710,7 @@ linux64
 -
 rust
 -
-searchfox
+cross
 -
 linux64
 -
@@ -895,7 +893,7 @@ linux64
 -
 rust
 -
-searchfox
+ios
 -
 linux64
 -
@@ -1068,7 +1066,7 @@ linux64
 -
 rust
 -
-searchfox
+cross
 -
 linux64
 -
@@ -1348,7 +1346,7 @@ linux64
 -
 rust
 -
-searchfox
+cross
 -
 linux64
 -
