Backed out 3 changesets (bug 1769586) for causing Bug 1920082.
Backed out changeset d684010261d6 (bug 1769586)
Backed out changeset b3264bc533e2 (bug 1769586)
Backed out changeset 049fd286ce0f (bug 1769586)

UltraBlame original commit: 35a3e4d687e64232d2cf88597ce63ab543d48a9a

--- a/testing/web-platform/meta/custom-elements/element-internals-aria-element-reflection.html.ini
+++ b/testing/web-platform/meta/custom-elements/element-internals-aria-element-reflection.html.ini
@@ -11,14 +11,22 @@ reflection
 .
 html
 ]
-prefs
-:
 [
-accessibility
+Getting
+previously
+-
+unset
+ARIA
+element
+reflection
+properties
+on
+ElementInternals
+should
+return
+null
 .
-ARIAElementReflection
-.
-enabled
-:
-true
 ]
+expected
+:
+FAIL
