--- a/testing/web-platform/meta/html/dom/aria-element-reflection-disconnected.html.ini
+++ b/testing/web-platform/meta/html/dom/aria-element-reflection-disconnected.html.ini
@@ -20,3 +20,21 @@ enabled
 :
 true
 ]
+[
+Element
+references
+should
+stay
+valid
+when
+content
+is
+disconnected
+(
+element
+array
+)
+]
+expected
+:
+FAIL
