Bug 1767691 - Disable browser_toolbox_rule_view_reload.js on linux and mac for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D226083

UltraBlame original commit: aa9f855e987eb297c1804ce4d17fcc60a47f6be5

--- a/devtools/client/responsive/test/browser/browser.toml
+++ b/devtools/client/responsive/test/browser/browser.toml
@@ -817,6 +817,70 @@ browser_toolbox_rule_view_reload
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x84_64
+'
+"
+#
+Bug
+1767691
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+#
+Bug
+1767691
+]
 [
 "
 browser_toolbox_swap_browsers
