Backed out 2 changesets (bug 1909343, bug 1890886) for causing crashes. CLOSED TREE
Backed out changeset 9f36338ef1de (bug 1909343)
Backed out changeset 4e30cef2e71c (bug 1890886)

UltraBlame original commit: d45a214dab825bdb25b94438b772f989eaf3d9d1

--- a/taskcluster/kinds/toolchain/rust.yml
+++ b/taskcluster/kinds/toolchain/rust.yml
@@ -452,7 +452,7 @@ rust
 -
 1
 .
-82
+81
 :
 treeherder
 :
@@ -475,7 +475,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -852,7 +852,7 @@ cross
 -
 1
 .
-82
+81
 :
 description
 :
@@ -889,7 +889,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -1088,7 +1088,7 @@ static
 -
 1
 .
-82
+81
 :
 description
 :
@@ -1123,7 +1123,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -1238,7 +1238,7 @@ macos
 -
 1
 .
-82
+81
 :
 description
 :
@@ -1274,7 +1274,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -1357,7 +1357,7 @@ ios
 -
 1
 .
-82
+81
 :
 description
 :
@@ -1393,7 +1393,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -1478,7 +1478,7 @@ android
 -
 1
 .
-82
+81
 :
 description
 :
@@ -1514,7 +1514,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -1633,7 +1633,7 @@ windows
 -
 1
 .
-82
+81
 :
 description
 :
@@ -1669,7 +1669,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -1768,7 +1768,7 @@ rust
 -
 1
 .
-82
+81
 :
 treeherder
 :
@@ -1791,7 +1791,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -1874,7 +1874,7 @@ rust
 -
 1
 .
-82
+81
 :
 treeherder
 :
@@ -1897,7 +1897,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -1948,7 +1948,7 @@ rust
 -
 1
 .
-82
+81
 :
 treeherder
 :
@@ -1971,7 +1971,7 @@ channel
 '
 1
 .
-82
+81
 .
 0
 '
@@ -3779,3 +3779,165 @@ rust
 default
 :
 null
+#
+Searchfox
+uses
+Rust
+1
+.
+82
+.
+0
+-
+beta
+.
+5
+to
+index
+all
+vendored
+crates
+.
+#
+Revert
+this
+to
+use
+stable
+once
+1
+.
+82
+.
+0
+is
+released
+.
+linux64
+-
+rust
+-
+searchfox
+:
+treeherder
+:
+symbol
+:
+TL
+(
+rust
+-
+searchfox
+)
+run
+:
+arguments
+:
+[
+'
+-
+-
+channel
+'
+'
+1
+.
+82
+.
+0
+-
+beta
+.
+5
+'
+'
+-
+-
+host
+'
+'
+x86_64
+-
+unknown
+-
+linux
+-
+gnu
+'
+'
+-
+-
+target
+'
+'
+x86_64
+-
+unknown
+-
+linux
+-
+gnu
+'
+'
+-
+-
+target
+'
+'
+aarch64
+-
+linux
+-
+android
+'
+'
+-
+-
+target
+'
+'
+x86_64
+-
+apple
+-
+darwin
+'
+'
+-
+-
+target
+'
+'
+aarch64
+-
+apple
+-
+darwin
+'
+'
+-
+-
+target
+'
+'
+aarch64
+-
+apple
+-
+ios
+'
+'
+-
+-
+target
+'
+'
+x86_64
+-
+pc
+-
+windows
+-
+msvc
+'
+]
