--- a/mobile/android/fenix/automation/taskcluster/androidTest/flank-arm-legacy-api-tests.yml
+++ b/mobile/android/fenix/automation/taskcluster/androidTest/flank-arm-legacy-api-tests.yml
@@ -256,7 +256,7 @@ device
 -
 model
 :
-Pixel2
+MediumPhone
 .
 arm
 version
@@ -268,19 +268,21 @@ en_US
 -
 model
 :
-Pixel2
+MediumPhone
 .
 arm
 version
 :
-27
+28
 locale
 :
 en_US
 -
 model
 :
-redfin
+MediumPhone
+.
+arm
 version
 :
 30
@@ -290,10 +292,12 @@ en_US
 -
 model
 :
-x1q
+MediumPhone
+.
+arm
 version
 :
-29
+32
 locale
 :
 en_US
