Bug 1922559 - Make it possible to skip HTTPS upgrade for TURN requests, r=bwc,necko-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226051

UltraBlame original commit: b9985db52a3577c35467ba72765bd9cd919d6802

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -71418,6 +71418,23 @@ true
 mirror
 :
 always
+-
+name
+:
+media
+.
+webrtc
+.
+disallow_HTTPS_upgrade_for_TURN
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
 #
 If
 true
