--- a/netwerk/metrics.yaml
+++ b/netwerk/metrics.yaml
@@ -8354,6 +8354,24 @@ cgi
 id
 =
 1883954
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922559
 data_reviews
 :
 -
@@ -8450,6 +8468,8 @@ https_rr
 web_extension_upgrade
 -
 upgrade_exception
+-
+skip_upgrade
 http_channel_sub_open_to_first_sent_https_rr
 :
 type
