--- a/testing/web-platform/meta/webrtc/RTCPeerConnection-getStats-timestamp.https.html.ini
+++ b/testing/web-platform/meta/webrtc/RTCPeerConnection-getStats-timestamp.https.html.ini
@@ -27,19 +27,33 @@ os
 =
 =
 "
-win
+mac
 "
 )
 and
 not
 debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 (
 processor
 =
 =
 "
-x86_64
+x86
 "
 )
 :
@@ -53,12 +67,64 @@ os
 =
 =
 "
-mac
+linux
 "
 )
 and
 not
 debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+not
+debug
+and
+(
+os
+=
+=
+"
+win
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 PASS
