Bug 1924455 [wpt PR 48591] - Update wpt metadata, a=testonly
wpt-pr: 48591
wpt-type: metadata

UltraBlame original commit: abfccdea64bc2df85bc3c6365f7dd4bb93e38429

--- a/testing/web-platform/meta/mediacapture-insertable-streams/VideoTrackGenerator-with-window-tracks.https.html.ini
+++ b/testing/web-platform/meta/mediacapture-insertable-streams/VideoTrackGenerator-with-window-tracks.https.html.ini
@@ -34,7 +34,7 @@ element
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Tests
 that
@@ -55,7 +55,7 @@ connection
 ]
 expected
 :
-NOTRUN
+FAIL
 [
 Tests
 that
@@ -71,4 +71,4 @@ scaleResolutionDownBy
 ]
 expected
 :
-NOTRUN
+FAIL
