--- a/testing/web-platform/meta/shadow-dom/focus-navigation/reading-flow/tentative/grid-order-with-display-contents.html.ini
+++ b/testing/web-platform/meta/shadow-dom/focus-navigation/reading-flow/tentative/grid-order-with-display-contents.html.ini
@@ -69,3 +69,67 @@ containers
 expected
 :
 FAIL
+[
+Items
+in
+display
+contents
+are
+sorted
+in
+same
+grid
+container
+and
+are
+placed
+in
+the
+position
+where
+their
+first
+child
+resides
+.
+]
+expected
+:
+FAIL
+[
+Items
+in
+display
+contents
+are
+sorted
+in
+same
+grid
+container
+and
+are
+placed
+in
+the
+position
+where
+their
+first
+child
+resides
+.
+The
+display
+contents
+have
+tabindex
+and
+should
+be
+focusable
+.
+]
+expected
+:
+FAIL
