--- a/testing/web-platform/meta/css/css-color/parsing/color-valid-relative-color.html.ini
+++ b/testing/web-platform/meta/css/css-color/parsing/color-valid-relative-color.html.ini
@@ -1993,3 +1993,38 @@ value
 expected
 :
 FAIL
+[
+e
+.
+style
+[
+'
+color
+'
+\
+]
+=
+"
+oklch
+(
+from
+red
+calc
+(
+1
+/
+l
+)
+c
+h
+)
+"
+should
+set
+the
+property
+value
+]
+expected
+:
+FAIL
