Bug 1924942 [wpt PR 48638] - Update wpt metadata, a=testonly
wpt-pr: 48638
wpt-type: metadata

UltraBlame original commit: cfacf2e20955d4dc1dfb74d8eb2c91f8e4bac5f7

--- a/testing/web-platform/meta/css/css-anchor-position/try-tactic-wm.html.ini
+++ b/testing/web-platform/meta/css/css-anchor-position/try-tactic-wm.html.ini
@@ -64,3 +64,27 @@ rtl
 expected
 :
 FAIL
+[
+flip
+-
+inline
+sideways
+-
+lr
+ltr
+]
+expected
+:
+FAIL
+[
+flip
+-
+block
+sideways
+-
+rl
+ltr
+]
+expected
+:
+FAIL
