Bug 1925131 - [wpt-sync] Update web-platform-tests to 477be4a28457a449c8505acede0ddbb31ab9e0e2, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 477be4a28457a449c8505acede0ddbb31ab9e0e2
wpt-type: landing

UltraBlame original commit: 3c034dfdc0f0f52f80eb2047315e168eccfa1b8e

--- a/testing/web-platform/meta/cookies/attributes/domain.sub.html.ini
+++ b/testing/web-platform/meta/cookies/attributes/domain.sub.html.ini
@@ -20,11 +20,11 @@ and
 not
 debug
 and
-fission
+asan
 :
 [
-OK
 TIMEOUT
+OK
 ]
 if
 (
@@ -40,11 +40,11 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-TIMEOUT
 OK
+TIMEOUT
 ]
 [
 Return
@@ -203,32 +203,9 @@ linux
 and
 not
 debug
-and
-fission
 :
 [
 PASS
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-fission
-:
-[
-PASS
-TIMEOUT
 NOTRUN
 ]
 [
@@ -266,7 +243,8 @@ and
 not
 debug
 and
-fission
+not
+asan
 and
 tsan
 :
@@ -288,7 +266,8 @@ and
 not
 debug
 and
-fission
+not
+asan
 and
 not
 tsan
@@ -310,12 +289,12 @@ and
 not
 debug
 and
-not
-fission
+asan
 :
 [
-NOTRUN
+TIMEOUT
 PASS
+NOTRUN
 ]
 [
 Cookies
@@ -359,37 +338,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -405,12 +359,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 Cookies
@@ -454,37 +408,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -500,12 +429,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 No
@@ -537,37 +466,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -583,12 +487,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 No
@@ -620,37 +524,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -666,12 +545,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 No
@@ -703,37 +582,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -749,12 +603,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 Return
@@ -790,37 +644,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -836,12 +665,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 Empty
@@ -867,37 +696,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -913,12 +717,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 Empty
@@ -944,37 +748,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -990,12 +769,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 Empty
@@ -1021,37 +800,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -1067,12 +821,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 Cookie
@@ -1110,31 +864,8 @@ linux
 and
 not
 debug
-and
-fission
 :
 [
-PASS
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-fission
-:
-[
-TIMEOUT
 PASS
 NOTRUN
 ]
@@ -1203,37 +934,12 @@ and
 not
 debug
 and
-fission
-and
-tsan
+asan
 :
 [
+NOTRUN
 PASS
 TIMEOUT
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-fission
-and
-not
-tsan
-:
-[
-PASS
-TIMEOUT
-NOTRUN
 ]
 if
 (
@@ -1249,12 +955,12 @@ not
 debug
 and
 not
-fission
+asan
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 [
 Return
