--- a/testing/web-platform/meta/css/css-color/parsing/color-computed-relative-color.html.ini
+++ b/testing/web-platform/meta/css/css-color/parsing/color-computed-relative-color.html.ini
@@ -170,3 +170,157 @@ z
 expected
 :
 FAIL
+[
+Property
+color
+value
+'
+rgb
+(
+from
+rebeccapurple
+none
+none
+none
+)
+'
+]
+expected
+:
+FAIL
+[
+Property
+color
+value
+'
+rgb
+(
+from
+rgb
+(
+20
+%
+40
+%
+60
+%
+/
+80
+%
+)
+r
+g
+none
+/
+alpha
+)
+'
+]
+expected
+:
+FAIL
+[
+Property
+color
+value
+'
+rgb
+(
+from
+rebeccapurple
+r
+g
+none
+)
+'
+]
+expected
+:
+FAIL
+[
+Property
+color
+value
+'
+rgb
+(
+from
+rebeccapurple
+none
+none
+none
+/
+none
+)
+'
+]
+expected
+:
+FAIL
+[
+Property
+color
+value
+'
+rgb
+(
+from
+rebeccapurple
+r
+g
+none
+/
+alpha
+)
+'
+]
+expected
+:
+FAIL
+[
+Property
+color
+value
+'
+light
+-
+dark
+(
+color
+-
+mix
+(
+in
+srgb
+rgb
+(
+from
+rebeccapurple
+none
+g
+b
+)
+rebeccapurple
+)
+color
+-
+mix
+(
+in
+srgb
+rgb
+(
+from
+rebeccapurple
+none
+g
+b
+)
+rebeccapurple
+)
+)
+'
+]
+expected
+:
+FAIL
