--- a/testing/web-platform/meta/html/canvas/element/manual/imagebitmap/createImageBitmap-origin.sub.html.ini
+++ b/testing/web-platform/meta/html/canvas/element/manual/imagebitmap/createImageBitmap-origin.sub.html.ini
@@ -51,8 +51,8 @@ x86_64
 )
 :
 [
-FAIL
 PASS
+FAIL
 NOTRUN
 ]
 if
@@ -79,6 +79,33 @@ x86
 [
 PASS
 FAIL
+NOTRUN
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+FAIL
+PASS
 NOTRUN
 ]
 [
@@ -123,8 +150,8 @@ x86_64
 )
 :
 [
-FAIL
 PASS
+FAIL
 TIMEOUT
 NOTRUN
 ]
@@ -152,6 +179,34 @@ x86
 [
 PASS
 FAIL
+TIMEOUT
+NOTRUN
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
