--- a/testing/web-platform/meta/html/cross-origin-opener-policy/coep-with-cross-origin.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/coep-with-cross-origin.https.html.ini
@@ -23,9 +23,6 @@ android
 "
 )
 and
-not
-swgl
-and
 debug
 :
 [
@@ -43,12 +40,10 @@ android
 )
 and
 not
-swgl
-and
-not
 debug
 :
 [
 OK
+ERROR
 TIMEOUT
 ]
