--- a/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-remove-source.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-remove-source.html.ini
@@ -30,32 +30,23 @@ os
 =
 =
 "
-android
-"
-)
-and
-debug
-and
-not
-swgl
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
 linux
 "
 )
+and
+not
+debug
+and
+not
+tsan
+and
+asan
+and
+fission
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -74,15 +65,68 @@ processor
 =
 =
 "
-x86_64
+x86
+"
+)
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
 not
-swgl
+debug
+and
+tsan
 :
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+:
+FAIL
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+:
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
