--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -38,6 +38,31 @@ and
 not
 debug
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+tsan
+and
+not
+debug
+and
 not
 asan
 :
@@ -71,16 +96,14 @@ os
 =
 =
 "
-linux
+mac
 "
 )
 and
-tsan
+not
+debug
 :
-[
-FAIL
 PASS
-]
 if
 (
 os
@@ -93,15 +116,6 @@ android
 and
 not
 debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
 :
 PASS
 [
@@ -141,6 +155,31 @@ and
 not
 debug
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+tsan
+and
+not
+debug
+and
 not
 asan
 :
@@ -174,16 +213,14 @@ os
 =
 =
 "
-linux
+mac
 "
 )
 and
-tsan
+not
+debug
 :
-[
-FAIL
 PASS
-]
 if
 (
 os
@@ -196,15 +233,6 @@ android
 and
 not
 debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
 :
 PASS
 [
@@ -244,6 +272,31 @@ and
 not
 debug
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+tsan
+and
+not
+debug
+and
 not
 asan
 :
@@ -277,16 +330,14 @@ os
 =
 =
 "
-linux
+mac
 "
 )
 and
-tsan
+not
+debug
 :
-[
-FAIL
 PASS
-]
 if
 (
 os
@@ -299,15 +350,6 @@ android
 and
 not
 debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
 :
 PASS
 [
@@ -345,6 +387,31 @@ and
 not
 debug
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+tsan
+and
+not
+debug
+and
 not
 asan
 :
@@ -378,16 +445,14 @@ os
 =
 =
 "
-linux
+mac
 "
 )
 and
-tsan
+not
+debug
 :
-[
-FAIL
 PASS
-]
 if
 (
 os
@@ -400,15 +465,6 @@ android
 and
 not
 debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
 :
 PASS
 [
@@ -442,6 +498,31 @@ and
 not
 debug
 and
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+tsan
+and
+not
+debug
+and
 not
 asan
 :
@@ -475,16 +556,14 @@ os
 =
 =
 "
-linux
+mac
 "
 )
 and
-tsan
+not
+debug
 :
-[
-FAIL
 PASS
-]
 if
 (
 os
@@ -497,15 +576,6 @@ android
 and
 not
 debug
-:
-PASS
-if
-os
-=
-=
-"
-mac
-"
 :
 PASS
 [
