--- a/testing/web-platform/meta/intersection-observer/grow-height-and-scrolled.html.ini
+++ b/testing/web-platform/meta/intersection-observer/grow-height-and-scrolled.html.ini
@@ -29,8 +29,6 @@ scrolled
 expected
 :
 if
-fission
-and
 (
 os
 =
@@ -39,6 +37,11 @@ os
 linux
 "
 )
+and
+not
+asan
+and
+fission
 and
 not
 debug
@@ -53,9 +56,6 @@ x86_64
 )
 and
 not
-asan
-and
-not
 tsan
 :
 [
@@ -63,9 +63,6 @@ PASS
 FAIL
 ]
 if
-not
-fission
-and
 (
 os
 =
@@ -75,6 +72,46 @@ linux
 "
 )
 and
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
 debug
 :
 [
