--- a/testing/web-platform/meta/navigation-api/state/cross-document-away-and-back.html.ini
+++ b/testing/web-platform/meta/navigation-api/state/cross-document-away-and-back.html.ini
@@ -27,3 +27,69 @@ back
 expected
 :
 FAIL
+[
+cross
+-
+document
+-
+away
+-
+and
+-
+back
+.
+html
+?
+method
+=
+navigate
+]
+[
+entry
+.
+getState
+(
+)
+behavior
+after
+navigating
+away
+and
+back
+]
+expected
+:
+FAIL
+[
+cross
+-
+document
+-
+away
+-
+and
+-
+back
+.
+html
+?
+method
+=
+updateCurrentEntry
+]
+[
+entry
+.
+getState
+(
+)
+behavior
+after
+navigating
+away
+and
+back
+]
+expected
+:
+FAIL
