--- a/testing/web-platform/meta/navigation-api/state/cross-document-location-api.html.ini
+++ b/testing/web-platform/meta/navigation-api/state/cross-document-location-api.html.ini
@@ -27,3 +27,69 @@ navigation
 expected
 :
 FAIL
+[
+cross
+-
+document
+-
+location
+-
+api
+.
+html
+?
+method
+=
+navigate
+]
+[
+entry
+.
+getState
+(
+)
+behavior
+after
+cross
+-
+document
+location
+API
+navigation
+]
+expected
+:
+FAIL
+[
+cross
+-
+document
+-
+location
+-
+api
+.
+html
+?
+method
+=
+updateCurrentEntry
+]
+[
+entry
+.
+getState
+(
+)
+behavior
+after
+cross
+-
+document
+location
+API
+navigation
+]
+expected
+:
+FAIL
