--- a/testing/web-platform/meta/navigation-api/state/history-pushState.html.ini
+++ b/testing/web-platform/meta/navigation-api/state/history-pushState.html.ini
@@ -39,3 +39,57 @@ pushState
 expected
 :
 FAIL
+[
+history
+-
+pushState
+.
+html
+?
+method
+=
+updateCurrentEntry
+]
+[
+entry
+.
+getState
+(
+)
+after
+history
+.
+pushState
+(
+)
+]
+expected
+:
+FAIL
+[
+history
+-
+pushState
+.
+html
+?
+method
+=
+navigate
+]
+[
+entry
+.
+getState
+(
+)
+after
+history
+.
+pushState
+(
+)
+]
+expected
+:
+FAIL
