--- a/testing/web-platform/meta/navigation-api/state/history-replaceState.html.ini
+++ b/testing/web-platform/meta/navigation-api/state/history-replaceState.html.ini
@@ -39,3 +39,57 @@ replaceState
 expected
 :
 FAIL
+[
+history
+-
+replaceState
+.
+html
+?
+method
+=
+navigate
+]
+[
+entry
+.
+getState
+(
+)
+after
+history
+.
+replaceState
+(
+)
+]
+expected
+:
+FAIL
+[
+history
+-
+replaceState
+.
+html
+?
+method
+=
+updateCurrentEntry
+]
+[
+entry
+.
+getState
+(
+)
+after
+history
+.
+replaceState
+(
+)
+]
+expected
+:
+FAIL
