--- a/testing/web-platform/meta/navigation-api/state/location-reload.html.ini
+++ b/testing/web-platform/meta/navigation-api/state/location-reload.html.ini
@@ -39,3 +39,57 @@ reload
 expected
 :
 FAIL
+[
+location
+-
+reload
+.
+html
+?
+method
+=
+updateCurrentEntry
+]
+[
+entry
+.
+getState
+(
+)
+after
+location
+.
+reload
+(
+)
+]
+expected
+:
+FAIL
+[
+location
+-
+reload
+.
+html
+?
+method
+=
+navigate
+]
+[
+entry
+.
+getState
+(
+)
+after
+location
+.
+reload
+(
+)
+]
+expected
+:
+FAIL
