--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/audioworklet-denormals.https.window.js.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/audioworklet-denormals.https.window.js.ini
@@ -9,6 +9,25 @@ window
 .
 html
 ]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+OK
+TIMEOUT
+]
 [
 Test
 denormal
@@ -18,4 +37,21 @@ AudioWorkletGlobalScope
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+]
 FAIL
