--- a/testing/web-platform/meta/webtransport/close.https.any.js.ini
+++ b/testing/web-platform/meta/webtransport/close.https.any.js.ini
@@ -63,8 +63,8 @@ if
 tsan
 :
 [
-ERROR
 OK
+ERROR
 TIMEOUT
 CRASH
 ]
@@ -394,16 +394,6 @@ OK
 TIMEOUT
 ]
 if
-fission
-and
-tsan
-:
-[
-ERROR
-OK
-TIMEOUT
-]
-if
 not
 fission
 :
@@ -563,6 +553,18 @@ reason
 ]
 expected
 :
+if
+not
+fission
+and
+debug
+:
+[
+FAIL
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 PASS
 TIMEOUT
