--- a/testing/web-platform/meta/xhr/abort-after-stop.window.js.ini
+++ b/testing/web-platform/meta/xhr/abort-after-stop.window.js.ini
@@ -9,21 +9,30 @@ window
 .
 html
 ]
+[
+XMLHttpRequest
+:
+abort
+event
+should
+fire
+when
+stop
+(
+)
+method
+is
+used
+]
 expected
 :
 if
-(
-os
-=
-=
-"
-android
-"
-)
+asan
 and
+not
 fission
 :
 [
-OK
-TIMEOUT
+PASS
+FAIL
 ]
