--- a/testing/web-platform/meta/css/css-grid/alignment/grid-align-baseline-line-clamp-002.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-grid/alignment/grid-align-baseline-line-clamp-002.tentative.html.ini
@@ -84,42 +84,79 @@ linux
 "
 )
 and
+not
 debug
+and
+asan
 and
 fission
 :
+[
 PASS
+FAIL
+]
 if
+(
 os
 =
 =
 "
-win
+linux
 "
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
 :
-FAIL
-if
-os
-=
-=
-"
-mac
-"
-:
-FAIL
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
 [
 FAIL
 PASS
 ]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+asan
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 .
 target
@@ -169,42 +206,79 @@ linux
 "
 )
 and
+not
 debug
+and
+asan
 and
 fission
 :
+[
 PASS
+FAIL
+]
 if
+(
 os
 =
 =
 "
-win
+linux
 "
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
 :
-FAIL
-if
-os
-=
-=
-"
-mac
-"
-:
-FAIL
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
 [
 FAIL
 PASS
 ]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+asan
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 .
 target
@@ -254,39 +328,76 @@ linux
 "
 )
 and
+not
 debug
+and
+asan
 and
 fission
 :
+[
 PASS
+FAIL
+]
 if
+(
 os
 =
 =
 "
-win
+linux
 "
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
 :
-FAIL
-if
-os
-=
-=
-"
-mac
-"
-:
-FAIL
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
 [
 FAIL
 PASS
 ]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+asan
+:
+[
+FAIL
+PASS
+]
+FAIL
