--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html.ini
@@ -128,6 +128,61 @@ win
 and
 not
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+fission
+and
+not
+debug
 :
 [
 PASS
