--- a/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/move-back-iframe-success-external-classic.html.ini
+++ b/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/moving-between-documents/move-back-iframe-success-external-classic.html.ini
@@ -38,49 +38,27 @@ os
 =
 =
 "
-android
+linux
 "
 )
 and
-debug
+not
+fission
 and
-swgl
+not
+debug
 :
 [
 PASS
 FAIL
 ]
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-debug
-and
-not
-swgl
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 [
 PASS
