--- a/testing/web-platform/meta/intersection-observer/scroll-margin-no-intersect.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-no-intersect.html.ini
@@ -18,8 +18,6 @@ intersection
 expected
 :
 if
-fission
-and
 (
 os
 =
@@ -31,6 +29,11 @@ linux
 and
 not
 debug
+and
+fission
+and
+not
+asan
 and
 (
 processor
@@ -42,9 +45,6 @@ x86_64
 )
 and
 not
-asan
-and
-not
 tsan
 :
 [
@@ -52,8 +52,47 @@ PASS
 FAIL
 ]
 if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
 fission
 and
+asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
 (
 os
 =
@@ -70,27 +109,14 @@ PASS
 FAIL
 ]
 if
-not
-fission
-and
-debug
-and
 (
 os
 =
 =
 "
-linux
+android
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-not
-fission
 and
 not
 debug
