--- a/testing/web-platform/meta/intersection-observer/scroll-margin-non-scrolling-root.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-non-scrolling-root.html.ini
@@ -22,6 +22,9 @@ expected
 if
 fission
 and
+not
+asan
+and
 (
 os
 =
@@ -44,9 +47,6 @@ x86_64
 )
 and
 not
-asan
-and
-not
 tsan
 :
 [
@@ -57,25 +57,7 @@ if
 not
 fission
 and
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
 debug
-:
-[
-PASS
-FAIL
-]
-if
-not
-fission
 and
 (
 os
@@ -85,6 +67,26 @@ os
 linux
 "
 )
+:
+[
+PASS
+FAIL
+]
+if
+fission
+and
+asan
+:
+[
+PASS
+FAIL
+]
+if
+not
+fission
+and
+not
+debug
 :
 [
 PASS
