--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
@@ -53,13 +53,26 @@ os
 =
 =
 "
-mac
+win
 "
 )
 and
+not
 debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
+[
+FAIL
 PASS
+]
 if
 (
 os
@@ -72,6 +85,28 @@ linux
 and
 not
 tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+PASS
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
 :
 PASS
 if
