Bug 1923028 - Migrate scalars to use Glean APIs for widget.*, r=chutten,win-reviewers,gstoll.
Differential Revision: https://phabricator.services.mozilla.com/D225861

UltraBlame original commit: 4b38f7dd65a4693bc810ba984d175990b52f6870

--- a/widget/gtk/metrics.yaml
+++ b/widget/gtk/metrics.yaml
@@ -124,11 +124,11 @@ Core
 :
 Widget
 :
-Cocoa
+Gtk
 '
 widget
 :
-ime_name_on_mac
+ime_name_on_linux
 :
 type
 :
@@ -138,55 +138,58 @@ description
 >
 Name
 of
-IME
+active
+IM
+(
+e
+.
+g
+.
+xim
+fcitx
+ibus
+etc
+)
 which
 was
-selected
+actually
+set
 by
-users
+env
 on
-macOS
+Linux
 .
-The
+Different
+from
+Windows
+and
+macOS
+this
 value
-is
-Input
-Source
-ID
-if
+includes
 non
 -
-Japanese
 IME
-was
-open
-.
-Otherwise
-if
-Japanese
-IME
-was
-open
-the
-value
+users
+even
+though
+this
 is
-Bundle
-ID
-.
-Input
-Source
-ID
-includes
-input
-mode
-but
-Bundle
-ID
-does
-not
-include
-input
-mode
+recoded
+when
+first
+compositionstart
+event
+because
+dead
+key
+is
+also
+implemented
+by
+IME
+on
+Linux
 .
 This
 metric
@@ -201,7 +204,7 @@ Telemetry
 scalar
 widget
 .
-ime_name_on_mac
+ime_name_on_linux
 .
 bugs
 :
@@ -241,4 +244,76 @@ expires
 never
 telemetry_mirror
 :
-WIDGET_IME_NAME_ON_MAC
+WIDGET_IME_NAME_ON_LINUX
+gtk_version
+:
+type
+:
+string
+description
+:
+>
+The
+version
+of
+Gtk
+3
+in
+use
+.
+This
+metric
+was
+generated
+to
+correspond
+to
+the
+Legacy
+Telemetry
+scalar
+widget
+.
+gtk_version
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzil
+.
+la
+/
+1670145
+data_reviews
+:
+-
+https
+:
+/
+/
+bugzil
+.
+la
+/
+1670145
+notification_emails
+:
+-
+layout
+-
+telemetry
+-
+alerts
+mozilla
+.
+com
+expires
+:
+never
+telemetry_mirror
+:
+WIDGET_GTK_VERSION
