--- a/widget/metrics.yaml
+++ b/widget/metrics.yaml
@@ -123,70 +123,23 @@ Core
 :
 :
 Widget
-:
-Cocoa
 '
 widget
 :
-ime_name_on_mac
+dark_mode
 :
 type
 :
-labeled_boolean
+boolean
 description
 :
 >
-Name
-of
-IME
-which
-was
-selected
-by
-users
-on
-macOS
-.
-The
-value
-is
-Input
-Source
-ID
-if
-non
--
-Japanese
-IME
-was
-open
-.
-Otherwise
-if
-Japanese
-IME
-was
-open
+Whether
 the
-value
+OS
+theme
 is
-Bundle
-ID
-.
-Input
-Source
-ID
-includes
-input
-mode
-but
-Bundle
-ID
-does
-not
-include
-input
-mode
+dark
 .
 This
 metric
@@ -201,7 +154,7 @@ Telemetry
 scalar
 widget
 .
-ime_name_on_mac
+dark_mode
 .
 bugs
 :
@@ -214,7 +167,7 @@ bugzil
 .
 la
 /
-1215818
+1601846
 data_reviews
 :
 -
@@ -226,13 +179,20 @@ bugzil
 .
 la
 /
-1215818
+1601846
 notification_emails
 :
 -
-mnakano
+layout
+-
+telemetry
+-
+alerts
+mozilla
 .
-birchill
+com
+-
+cmccormack
 mozilla
 .
 com
@@ -241,4 +201,4 @@ expires
 never
 telemetry_mirror
 :
-WIDGET_IME_NAME_ON_MAC
+WIDGET_DARK_MODE
