Bug 1390465: Load all subtitles in RFP. r=tjr
This patch targets non-js mode. By fetching everything, the website can't tell what language is being used.

Trying to protect js enabled mode would be impossible as websites can just use a custom player and record usage as they wish.

Differential Revision: https://phabricator.services.mozilla.com/D223636

UltraBlame original commit: 4d09e5f96818476816984ec547c9c7d4a2d2d76f

--- a/dom/media/webvtt/test/mochitest/mochitest.toml
+++ b/dom/media/webvtt/test/mochitest/mochitest.toml
@@ -376,6 +376,45 @@ html
 ]
 [
 "
+test_webvtt_resistfingerprinting
+.
+html
+"
+]
+support
+-
+files
+=
+[
+"
+basicvtt
+-
+server
+.
+sjs
+"
+]
+run
+-
+sequentially
+=
+"
+An
+extension
+having
+the
+same
+id
+is
+installed
+/
+uninstalled
+in
+different
+tests
+"
+[
+"
 test_webvtt_seeking
 .
 html
