Bug 1923212 - Skip tests that fail with ScotchBonnet enabled. r=mak,settings-reviewers,sessionstore-reviewers,urlbar-reviewers,dao,Gijs
Differential Revision: https://phabricator.services.mozilla.com/D224633

UltraBlame original commit: 4ef6f0f9300deb946d5d699c25a77339f1eb64bb

--- a/browser/base/content/test/performance/browser.toml
+++ b/browser/base/content/test/performance/browser.toml
@@ -265,6 +265,24 @@ revamp
 =
 false
 "
+#
+TODO
+:
+Renable
+in
+Bug
+1923381
+"
+browser
+.
+urlbar
+.
+scotchBonnet
+.
+enableOverride
+=
+false
+"
 ]
 support
 -
