Bug 1923813 - Make ahal the owner of Mozharness r=ahal,shtrom DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D225179

UltraBlame original commit: bf688b3e70b11c1462f55814ce5c4f188a8b7540

--- a/mots.yaml
+++ b/mots.yaml
@@ -1492,19 +1492,6 @@ nick
 gabriel
 -
 &
-gbrown
-bmo_id
-:
-411471
-name
-:
-Geoff
-Brown
-nick
-:
-gbrown
--
-&
 gcp
 bmo_id
 :
@@ -16578,7 +16565,7 @@ owners
 :
 -
 *
-gbrown
+ahal
 peers
 :
 -
@@ -16591,6 +16578,9 @@ owners_emeritus
 -
 Aki
 Sasaki
+-
+Geoff
+Brown
 peers_emeritus
 :
 -
