Bug 1916499 - Add searchForm support back to OpenSearch engines. r=Standard8,urlbar-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D225968

UltraBlame original commit: 1de300781d3f01aac4b1556b1190e227ba7d0b84

--- a/toolkit/components/search/tests/xpcshell/xpcshell.toml
+++ b/toolkit/components/search/tests/xpcshell/xpcshell.toml
@@ -938,6 +938,40 @@ js
 ]
 [
 "
+test_searchForm
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+opensearch
+/
+images
+.
+xml
+"
+"
+opensearch
+/
+simple
+.
+xml
+"
+"
+opensearch
+/
+suggestion
+.
+xml
+"
+]
+[
+"
 test_searchSuggest
 .
 js
